...
    <string formatted="false" name="confirm">Confirm</string>
    <string formatted="false" name="ignore">Ignore</string>
    <string formatted="false" name="cancel">Cancel</string>
    <string formatted="false" name="save">Save</string>
    <string formatted="false" name="help">Help</string>
...
    <string formatted="false" name="next">Next</string>

    <string formatted="false" name="ok">OK</string>
    <string formatted="false" name="done">Done</string>
    <string formatted="false" name="close">Close</string>
...
    <!-- Settings activity -->
    <string formatted="false" name="preference_title">Settings</string>
    <string formatted="false" name="preference_title_language">Language</string>
    <string formatted="false" name="preference_description_language">Set the app\'s language</string>

    <string formatted="false" name="preference_title_web_access">Web access</string>
    <string formatted="false" name="preference_description_web_access">Edit to add or remove trusted domains</string>
    <string formatted="false" name="preference_screen_web_access_title">Edit trusted domains</string>

    <string formatted="false" name="preference_title_ai">Artificial intelligence (AI) extension</string>
    <string formatted="false" name="preference_description_ai">Enable AI bricks and sensors</string>
    <string formatted="false" name="preference_title_ai_speech_recognition">Speech
        recognition</string>
    <string formatted="false" name="preference_description_ai_speech_recognition">Enable
        speech recognition bricks and sensors</string>
    <string formatted="false" name="preference_title_ai_speech_synthetization">Speech
        synthetization</string>
    <string formatted="false" name="preference_description_ai_speech_synthetization">Enable
        speech synthetization bricks and sensors</string>
    <string formatted="false" name="preference_title_ai_face_detection">Face
        detection</string>
    <string formatted="false" name="preference_description_ai_face_detection">Enable
        face detection bricks and sensors</string>
    <string formatted="false" name="preference_title_ai_pose_detection">Pose detection</string>
    <string formatted="false" name="preference_description_ai_pose_detection">Enable
        pose detection bricks and sensors</string>
    <string formatted="false" name="preference_title_ai_text_recognition">Text
        recognition</string>
    <string formatted="false" name="preference_description_ai_text_recognition">Enable
...
    <string formatted="false" name="preference_description_ai_object_recognition">Enable object recognition and tracking sensors</string>

    <string formatted="false" name="preference_title_accessibility">Accessibility</string>
    <string formatted="false" name="preference_description_accessibility">Change the app\'s appearance</string>
    <string formatted="false" name="preference_title_accessibility_profiles">Accessibility profiles</string>
    <string formatted="false" name="preference_title_accessibility_profile">Predefined profiles</string>
    <string formatted="false" name="preference_title_accessibility_profile_headline">Profiles</string>
    <string formatted="false" name="preference_title_accessibility_predefined_profile_headline">Predefined profiles</string>

    <string formatted="false" name="preference_description_accessibility_profiles">Pick a predefined accessibility profile</string>
...
    <string formatted="false" name="preference_access_summary_profile_tiro">Beginner mode</string>
    <string name="preference_dialog_use_full_features">Use full features</string>
    <string name="preference_dialog_appgallery">AppGallery</string>
    <string name="preference_dialog_google_play">Google Play</string>
    <string name="preference_lego_dialog_text">To take advantage of all features of the Lego
        Mindstorms extensions, please use Catrobat\'s Mindstorms Code EV3 NXT app.</string>
...

    <!-- Lego/Drone/Raspi/Chromecast/Embroidery -->
    <string formatted="false" name="preference_title_enable_quadcopter_bricks">Parrot AR.Drone 2.0 extension</string>
    <string formatted="false" name="preference_description_quadcopter_bricks">Allow the app to control Parrot AR.Drone 2.0 quadcopters</string>
    <string formatted="false" name="preference_title_enable_jumpingsumo_bricks">Parrot Jumping Sumo extension</string>
    <string formatted="false" name="preference_description_jumpingsumo_bricks">Allow the app to control Parrot\'s Jumping Sumo robots</string>
    <string formatted="false" name="preference_title_enable_mindstorms_nxt_bricks">Lego Mindstorms NXT extension</string>
    <string formatted="false" name="preference_title_enable_mindstorms_ev3_bricks">Lego Mindstorms EV3 extension</string>
    <string formatted="false" name="preference_description_mindstorms_nxt_bricks">Allow the app to control Lego Mindstorms NXT robots</string>
    <string formatted="false" name="preference_description_mindstorms_ev3_bricks">Allow the app to control Lego Mindstorms EV3 robots</string>
...
    <string formatted="false" name="preference_title_mindstorms_ev3_sensors">Lego EV3 Sensors</string>
    <string formatted="false" name="preference_title_drone_config_properties">Parrot AR.Drone 2.0 configuration</string>
    <string formatted="false" name="preference_title_enable_phiro_bricks">RobotixEdu\'s Phiro extension</string>
    <string formatted="false" name="preference_description_phiro_bricks">Allow the app to control RobotixEdu\'s Phiro robots</string>
    <string formatted="false" name="preference_title_enable_arduino_bricks">Arduino extension</string>
    <string formatted="false" name="preference_description_arduino_bricks">Allow the app to control Arduino boards</string>
    <string formatted="false" name="preference_title_enable_embroidery_bricks">Embroidery extension</string>
    <string formatted="false" name="preference_description_embroidery_bricks">Create patterns for stitching machines</string>
    <string formatted="false" name="preference_title_cast_feature_globally_enabled">Chromecast extension</string>
    <string formatted="false" name="preference_description_cast_feature_globally_enabled">Show cast button and enable cast projects</string>

    <string formatted="false" name="preference_title_enable_plot_bricks">Plot and Laser
        extension</string>
    <string formatted="false" name="preference_description_plot_bricks">Create patterns
        for plotting and laser cutter machines</string>
    <string formatted="false" name="preference_title_enable_nfc_bricks">Near Field Communication extension</string>
    <string formatted="false" name="preference_description_nfc_bricks">Allow the app to use NFC tags in projects</string>
    <string formatted="false" name="preference_title_enable_crash_reports">Sending anonymous crash reports</string>
    <string formatted="false" name="preference_description_crash_reports">Allow the app to send crash reports automatically</string>
    <!-- -->
    <string formatted="false" name="preference_title_enable_raspi_bricks">Raspberry Pi extension</string>
    <string formatted="false" name="preference_description_raspi_bricks">Allow the app to control Raspberry Pi computers</string>
    <string formatted="false" name="preference_raspi_enable_bricks">Enable bricks and sensors</string>
...
    <!--  -->

    <string formatted="false" name="preference_title_multiplayer_variables_enabled">Multiplayer extension</string>
    <string formatted="false" name="preference_description_multiplayer_variables_enabled">Allow the app to use
        multiplayer variables shared via Bluetooth</string>
...
    <string formatted="false" name="string_label">Text</string>
    <string formatted="false" name="data_label">Name</string>
    <string formatted="false" name="keyword_label">Search</string>
    <string formatted="false" name="html_label">Insert HTML text</string>
