...
        <TextView
            android:id="@+id/brick_change_size_by_label"
            style="@style/BrickText.SingleLine"
            android:text="@string/brick_change_size_by" />

        <TextView
            android:id="@+id/brick_change_size_by_edit_text"
            style="@style/BrickEditText" />

    </com.myradev.lunarcode.ui.BrickLayout>

</LinearLayout>
